enhance performance: - remove codes related to filling tempId bucket - change some methods in order to avoid timeout errors while still keeping performance